<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvGuia"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:textColorHint="@color/teal_700"
        android:textSize="30dp"
        android:textAlignment="center"
        android:hint="@string/msgGuia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/btnCalculadora"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:textSize="20dp"
        android:text="@string/msgCalculadora"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGuia"
        app:layout_constraintVertical_bias="0.05"/>

    <Button
        android:id="@+id/btnFormulario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:textSize="20dp"
        android:text="@string/msgFormulario"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCalculadora"
        app:layout_constraintVertical_bias="0.10"/>

    <Button
        android:id="@+id/btnDatos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:textSize="20dp"
        android:text="@string/msgDatos"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFormulario"
        app:layout_constraintVertical_bias="0.14"/>

</androidx.constraintlayout.widget.ConstraintLayout>